k8s/whispr/devzeyu/expo-dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: expo-status
  namespace: whispr-preprod
spec:
  selector:
    app: expo-status
  ports:
    - port: 80
